Edited wiki page through web user interface.

--- a/wiki/MineAPI.wiki
+++ b/wiki/MineAPI.wiki
@@ -35,10 +35,18 @@ take precedence over post-data.
 
   * `/pub` (get)
   * `/pub/*` (get)
+
+  -- where unprotected, public-access files live, eg: flash player binaries
+
   * `/doc` (get)
   * `/doc/*` (get)
+
+  -- authenticated access to documentation for this mine
+
   * `/ui` (get)
   * `/ui/*` (get)
+
+  -- root directory for user interface pages
 
 =Minekey URLs=
 
@@ -47,12 +55,12 @@ take precedence over post-data.
 
 =API Nomenclature=
 
-  * FMT - `xml` or `json`; the format in which to return status, or data
-  * KEY - string name one of the relevant keys (eg: `objectName`) being accessed or manipulated
-  * OID - decimal index number of an object, range 1..bignum
-  * CID - decimal index number of a comment for a given OID, range 1..bignum
-  * RID - decimal index number of a relation, range 1..bignum
-  * TID - decimal index number of a tag, range 1..bignum.
+  * FMT -- `xml` or `json`; the format in which to return status, or data
+  * KEY -- string name one of the relevant keys (eg: `objectName`) being accessed or manipulated
+  * OID -- decimal index number of an object, range 1..bignum
+  * CID -- decimal index number of a comment for a given OID, range 1..bignum
+  * RID -- decimal index number of a relation, range 1..bignum
+  * TID -- decimal index number of a tag, range 1..bignum.
 
 =API call return values=
 
@@ -129,22 +137,14 @@ non-zero == success (either a useful number, or integer 1)
   * `/api/relation/RID/key/KEY.FMT` (update)
   -- updates KEY in RID, returns status
 
-  * `/api/select/object.FMT` (read) *TODO*
-  -- tbd
-  * `/api/select/relation.FMT` (read) *TODO*
-  -- tbd
-  * `/api/select/tag.FMT` (read) *TODO*
-  -- tbd
-  * `/api/share/raw/RID/RVSN/OID.FMT` (read) *TODO*
-  -- tbd
-  * `/api/share/redirect/RID.FMT` (read) *TODO*
-  -- tbd
-  * `/api/share/redirect/RID/OID.FMT` (read) *TODO*
-  -- tbd
-  * `/api/share/url/RID.FMT` (read) *TODO*
-  -- tbd
-  * `/api/share/url/RID/OID.FMT` (read) *TODO*
-  -- tbd
+  * `/api/select/object.FMT` (read) *TODO* -- tbd
+  * `/api/select/relation.FMT` (read) *TODO* -- tbd
+  * `/api/select/tag.FMT` (read) *TODO* -- tbd
+  * `/api/share/raw/RID/RVSN/OID.FMT` (read) *TODO* -- tbd
+  * `/api/share/redirect/RID.FMT` (read) *TODO* -- tbd
+  * `/api/share/redirect/RID/OID.FMT` (read) *TODO* -- tbd
+  * `/api/share/url/RID.FMT` (read) *TODO* -- tbd
+  * `/api/share/url/RID/OID.FMT` (read) *TODO* -- tbd
 
   * `/api/tag.FMT` (create)
   -- creates a tag from valid tag keys supplied in postdata, returns tid
@@ -164,93 +164,58 @@ non-zero == success (either a useful number, or integer 1)
   -- updates KEY in TID, returns status
 
   * `/api/version.FMT` (read)
-  --
+  -- returns version information as a structure
 
 =valid object-related keys=
 
-  * `data`
-  -- the data described by the object, eg: a JPEG image
+  * `data` -- the data described by the object, eg: a JPEG image
 
   NOTE1: Because the `data` key has its own MIME-type, it is not available via
   a READ of `/api/object/OID/key/data.FMT`, however it may be CREATEd,
   UPDATEd or DELETEd.
 
-  * `objectCreated` *RO*
-  -- decimal unix time
-  * `objectDescription`
-  -- HTML
-  * `objectHideAfter`
-  -- decimal unix time
-  * `objectHideBefore`
-  -- decimal unix time
-  * `objectId` *RO* *GT0*
-  -- decimal integer
-  * `objectLastModified` *RO*
-  -- decimal unix time
-  * `objectName`
-  -- plaintext
-  * `objectStatus`
-  -- one of: `draft`, `final`, or `public`, plaintext
-  * `objectTags`
-  -- tag-text
-  * `objectType`
-  -- valid object mime type
+  * `objectCreated` *RO* -- decimal unix time
+  * `objectDescription` -- HTML
+  * `objectHideAfter` -- decimal unix time
+  * `objectHideBefore` -- decimal unix time
+  * `objectId` *RO* *GT0* -- decimal integer
+  * `objectLastModified` *RO* -- decimal unix time
+  * `objectName` -- plaintext
+  * `objectStatus` -- one of: `draft`, `final`, or `public`, plaintext
+  * `objectTags` -- tag-text
+  * `objectType` -- valid object mime type
 
 =valid comment-related keys=
 
-  * `commentBody`
-  -- HTML
-  * `commentCreated` *RO*
-  -- decimal unix time
-  * `commentId` *RO* *GT0*
-  -- decimal integer
-  * `commentLastModified` *RO*
-  -- decimal unix time
-  * `commentRelationId` *GT0*
-  -- decimal integer RID
-  * `commentSubject`
-  -- plaintext
+  * `commentBody` -- HTML
+  * `commentCreated` *RO* -- decimal unix time
+  * `commentId` *RO* *GT0* -- decimal integer
+  * `commentLastModified` *RO* -- decimal unix time
+  * `commentRelationId` *GT0* -- decimal integer RID
+  * `commentSubject` -- plaintext
 
 =valid relation-related keys=
 
-  * `relationContactEmail`
-  -- rfc822 email address, plaintext
-  * `relationContactURL`
-  -- URL, plaintext
-  * `relationCreated` *RO*
-  -- decimal unix time
-  * `relationDescription`
-  -- HTML
-  * `relationEmbargoAfter`
-  -- decimal unix time
-  * `relationEmbargoBefore`
-  -- decimal unix time
-  * `relationIPAddress`
-  -- CIDR (eg: `192.168.1.0/24`) *or* ip-address-prefix (eg: `192.168.1.`), of feed-reader, plaintext
-  * `relationId` *RO* *GT0*
-  -- decimal integer
-  * `relationImageURL`
-  -- URL
-  * `relationInterests`
-  -- relation-tag-text
-  * `relationLastModified` *RO*
-  -- decimal unix time
-  * `relationName`
-  -- plaintext
-  * `relationURL`
-  -- URL
-  * `relationVersion` *GT0*
-  -- decimal integer
+  * `relationContactEmail` -- rfc822 email address, plaintext
+  * `relationContactURL` -- URL, plaintext
+  * `relationCreated` *RO* -- decimal unix time
+  * `relationDescription` -- HTML
+  * `relationEmbargoAfter` -- decimal unix time
+  * `relationEmbargoBefore` -- decimal unix time
+  * `relationIPAddress` -- IP address from which this relation accesses you; 
+  -- as CIDR (eg: `192.168.1.0/24`) *or* ip-address-prefix (eg: `192.168.1.`)
+  * `relationId` *RO* *GT0* -- decimal integer
+  * `relationImageURL` -- URL
+  * `relationInterests` -- relation-tag-text
+  * `relationLastModified` *RO* -- decimal unix time
+  * `relationName` -- plaintext
+  * `relationURL` -- URL
+  * `relationVersion` *GT0* -- decimal integer
 
 =valid tag-related keys=
 
-  * `tagCreated` *RO*
-  -- decimal unix time
-  * `tagId` *RO* *GT0*
-  -- decimal integer
-  * `tagImplies`
-  -- tag-name
-  * `tagLastModified` *RO*
-  -- decimal unix time
-  * `tagName`
-  -- tag-name
+  * `tagCreated` *RO* -- decimal unix time
+  * `tagId` *RO* *GT0* -- decimal integer
+  * `tagImplies` -- tag-name
+  * `tagLastModified` *RO* -- decimal unix time
+  * `tagName` -- tag-name
