--- a/wiki/MineAPI.wiki
+++ b/wiki/MineAPI.wiki
@@ -64,78 +64,46 @@ take precedence over post-data.
 
 =API call return values=
 
-non-zero == success (either a useful number, or integer 1)
+  non-zero == success (either a useful number, or integer 1)
 
 =API URLs=
 
-  * `/api/config.FMT` (read) *TODO*
-  -- returns a list of configuration keys
-  * `/api/config/KEY.FMT` (create) *TODO*
-  -- updates multiple keys from valid config keys supplied in postdata, returns number of successful updates
-  * `/api/config/KEY.FMT` (delete) *TODO*
-  -- deletes KEY from configuration, returns status
-  * `/api/config/KEY.FMT` (read) *TODO*
-  -- reads KEY from configuration, returns value
-  * `/api/config/KEY.FMT` (update) *TODO*
-  -- updates KEY in configuration, returns status
+  * `/api/config.FMT` (read) *TODO* -- returns a list of configuration keys
+  * `/api/config/KEY.FMT` (create) *TODO* -- updates multiple keys from valid config keys supplied in postdata, returns number of successful updates
+  * `/api/config/KEY.FMT` (delete) *TODO* -- deletes KEY from configuration, returns status
+  * `/api/config/KEY.FMT` (read) *TODO* -- reads KEY from configuration, returns value
+  * `/api/config/KEY.FMT` (update) *TODO* -- updates KEY in configuration, returns status
 
-  * `/api/object.FMT` (create)
-  -- creates an object from valid object keys supplied in postdata, returns oid
-  * `/api/object.FMT` (read)
-  -- returns a list of oids, sorted most-recently-interesting-first
-  * `/api/object/OID` (read) *NOTE1*
-  -- returns the data associated with OID, eg: a JPEG file
-  * `/api/object/OID.FMT` (delete)
-  -- deletes OID, returns status
-  * `/api/object/OID.FMT` (read)
-  -- returns all metadata associated with OID
-  * `/api/object/OID/key.FMT` (create)
-  -- updates multiple keys for OID from valid object keys supplied in postdata, returns number of successful updates
-  * `/api/object/OID/key/KEY.FMT` (delete)
-  -- deletes KEY from OID, returns status
-  * `/api/object/OID/key/KEY.FMT` (read) *NOTE1*
-  -- reads KEY from OID, returns value
-  * `/api/object/OID/key/KEY.FMT` (update)
-  -- updates KEY in OID, returns status
+  * `/api/object.FMT` (create) -- creates an object from valid object keys supplied in postdata, returns oid
+  * `/api/object.FMT` (read) -- returns a list of oids, sorted most-recently-interesting-first
+  * `/api/object/OID` (read) *NOTE1* -- returns the data associated with OID, eg: a JPEG file
+  * `/api/object/OID.FMT` (delete) -- deletes OID, returns status
+  * `/api/object/OID.FMT` (read) -- returns all metadata associated with OID
+  * `/api/object/OID/key.FMT` (create) -- updates multiple keys for OID from valid object keys supplied in postdata, returns number of successful updates
+  * `/api/object/OID/key/KEY.FMT` (delete) -- deletes KEY from OID, returns status
+  * `/api/object/OID/key/KEY.FMT` (read) *NOTE1* -- reads KEY from OID, returns value
+  * `/api/object/OID/key/KEY.FMT` (update) -- updates KEY in OID, returns status
 
-  * `/api/object/OID/comment.FMT` (create) *TODO*
-  -- creates a comment (for OID) from valid comment keys supplied in postdata, returns cid
-  * `/api/object/OID/comment.FMT` (read) *TODO*
-  -- returns a list of cids (for OID) sorted most-recently-interesting-first
-  * `/api/object/OID/CID.FMT` (delete) *TODO*
-  -- deletes CID (for OID), returns status
-  * `/api/object/OID/CID.FMT` (read) *TODO*
-  -- returns all metadata associated with CID
-  * `/api/object/OID/CID/key.FMT` (create) *TODO*
-  -- updates multiple keys for CID (of OID) from valid comment keys supplied in postdata, returns number of successful updates
-  * `/api/object/OID/CID/key/KEY.FMT` (delete) *TODO*
-  -- deletes KEY from CID (of OID), returns status
-  * `/api/object/OID/CID/key/KEY.FMT` (read) *TODO*
-  -- reads KEY from CID (of OID), returns value
-  * `/api/object/OID/CID/key/KEY.FMT` (update) *TODO*
-  -- updates KEY in CID (of OID), returns status
+  * `/api/object/OID/comment.FMT` (create) *TODO* -- creates a comment (for OID) from valid comment keys supplied in postdata, returns cid
+  * `/api/object/OID/comment.FMT` (read) *TODO* -- returns a list of cids (for OID) sorted most-recently-interesting-first
+  * `/api/object/OID/CID.FMT` (delete) *TODO* -- deletes CID (for OID), returns status
+  * `/api/object/OID/CID.FMT` (read) *TODO* -- returns all metadata associated with CID
+  * `/api/object/OID/CID/key.FMT` (create) *TODO* -- updates multiple keys for CID (of OID) from valid comment keys supplied in postdata, returns number of successful updates
+  * `/api/object/OID/CID/key/KEY.FMT` (delete) *TODO* -- deletes KEY from CID (of OID), returns status
+  * `/api/object/OID/CID/key/KEY.FMT` (read) *TODO* -- reads KEY from CID (of OID), returns value
+  * `/api/object/OID/CID/key/KEY.FMT` (update) *TODO* -- updates KEY in CID (of OID), returns status
 
-  * `/api/object/OID/clone.FMT` (create) *TODO*
-  -- clones OID (sans comments), returns new OID
-  * `/api/object/OID/clone.FMT` (read) *TODO*
-  -- returns list of oids that are clones of OID
+  * `/api/object/OID/clone.FMT` (create) *TODO* -- clones OID (sans comments), returns new OID
+  * `/api/object/OID/clone.FMT` (read) *TODO* -- returns list of oids that are clones of OID
 
-  * `/api/relation.FMT` (create)
-  -- creates a relation from valid relation keys supplied in postdata, returns rid
-  * `/api/relation.FMT` (read)
-  -- returns a list of rids, sorted most-recently-interesting-first
-  * `/api/relation/RID.FMT` (delete)
-  -- deletes RID, returns status
-  * `/api/relation/RID.FMT` (read)
-  -- returns all metadata associated with RID
-  * `/api/relation/RID/key.FMT` (create)
-  -- updates multiple keys for RID from valid relation keys supplied in postdata, returns number of successful updates
-  * `/api/relation/RID/key/KEY.FMT` (delete)
-  -- deletes KEY from RID, returns status
-  * `/api/relation/RID/key/KEY.FMT` (read)
-  -- reads KEY from RID, returns value
-  * `/api/relation/RID/key/KEY.FMT` (update)
-  -- updates KEY in RID, returns status
+  * `/api/relation.FMT` (create) -- creates a relation from valid relation keys supplied in postdata, returns rid
+  * `/api/relation.FMT` (read) -- returns a list of rids, sorted most-recently-interesting-first
+  * `/api/relation/RID.FMT` (delete) -- deletes RID, returns status
+  * `/api/relation/RID.FMT` (read) -- returns all metadata associated with RID
+  * `/api/relation/RID/key.FMT` (create) -- updates multiple keys for RID from valid relation keys supplied in postdata, returns number of successful updates
+  * `/api/relation/RID/key/KEY.FMT` (delete) -- deletes KEY from RID, returns status
+  * `/api/relation/RID/key/KEY.FMT` (read) -- reads KEY from RID, returns value
+  * `/api/relation/RID/key/KEY.FMT` (update) -- updates KEY in RID, returns status
 
   * `/api/select/object.FMT` (read) *TODO* -- tbd
   * `/api/select/relation.FMT` (read) *TODO* -- tbd
@@ -146,33 +114,24 @@ non-zero == success (either a useful number, or integer 1)
   * `/api/share/url/RID.FMT` (read) *TODO* -- tbd
   * `/api/share/url/RID/OID.FMT` (read) *TODO* -- tbd
 
-  * `/api/tag.FMT` (create)
-  -- creates a tag from valid tag keys supplied in postdata, returns tid
-  * `/api/tag.FMT` (read)
-  -- returns a list of tids, sorted most-recently-interesting-first
-  * `/api/tag/TID.FMT` (delete)
-  -- deletes TID, returns status
-  * `/api/tag/TID.FMT` (read)
-  -- returns all metadata associated with TID
-  * `/api/tag/TID/key.FMT` (create)
-  -- updates multiple keys for TID from valid tag keys supplied in postdata, returns number of successful updates
-  * `/api/tag/TID/key/KEY.FMT` (delete)
-  -- deletes KEY from TID, returns status
-  * `/api/tag/TID/key/KEY.FMT` (read)
-  -- reads KEY from TID, returns value
-  * `/api/tag/TID/key/KEY.FMT` (update)
-  -- updates KEY in TID, returns status
+  * `/api/tag.FMT` (create) -- creates a tag from valid tag keys supplied in postdata, returns tid
+  * `/api/tag.FMT` (read) -- returns a list of tids, sorted most-recently-interesting-first
+  * `/api/tag/TID.FMT` (delete) -- deletes TID, returns status
+  * `/api/tag/TID.FMT` (read) -- returns all metadata associated with TID
+  * `/api/tag/TID/key.FMT` (create) -- updates multiple keys for TID from valid tag keys supplied in postdata, returns number of successful updates
+  * `/api/tag/TID/key/KEY.FMT` (delete) -- deletes KEY from TID, returns status
+  * `/api/tag/TID/key/KEY.FMT` (read) -- reads KEY from TID, returns value
+  * `/api/tag/TID/key/KEY.FMT` (update) -- updates KEY in TID, returns status
 
-  * `/api/version.FMT` (read)
-  -- returns version information as a structure
+  * `/api/version.FMT` (read) -- returns version information as a structure
 
 =valid object-related keys=
 
   * `data` -- the data described by the object, eg: a JPEG image
 
-  NOTE1: Because the `data` key has its own MIME-type, it is not available via
-  a READ of `/api/object/OID/key/data.FMT`, however it may be CREATEd,
-  UPDATEd or DELETEd.
+  NOTE1: Because the `data` key has its own MIME-type, it is not
+  available via a READ of `/api/object/OID/key/data.FMT`, however
+  `data` may be CREATEd, UPDATEd or DELETEd.
 
   * `objectCreated` *RO* -- decimal unix time
   * `objectDescription` -- HTML
