--- a/wiki/MineAPI.wiki
+++ b/wiki/MineAPI.wiki
@@ -53,6 +53,8 @@ take precedence over post-data.
   * `/get?key=MINEKEY` (get)
   * `/get?key=MINEKEY` (post) *TODO*
 
+  -- the only "public" URLs in a mine are either those under `/pub`, or those accessed via the Minekey interface `/get`; minekeys are opaque blobs referring to tuples of OID and RID, which may or may not yield data retreival.  All `/get` retreivals are audited.
+
 =API Nomenclature=
 
   * FMT -- `xml` or `json`; the format in which to return status, or data
@@ -68,62 +70,140 @@ take precedence over post-data.
 
 =API URLs=
 
-  * `/api/config.FMT` (read) *TODO* -- returns a list of configuration keys
-  * `/api/config/KEY.FMT` (create) *TODO* -- updates multiple keys from valid config keys supplied in postdata, returns number of successful updates
-  * `/api/config/KEY.FMT` (delete) *TODO* -- deletes KEY from configuration, returns status
-  * `/api/config/KEY.FMT` (read) *TODO* -- reads KEY from configuration, returns value
-  * `/api/config/KEY.FMT` (update) *TODO* -- updates KEY in configuration, returns status
+  * `/api/config.FMT` (read) *TODO*
+  _returns:_ a list of configuration keys
+  * `/api/config/KEY.FMT` (create) *TODO*
+  _action:_ updates multiple keys from valid config keys supplied in postdata
+  _returns:_ number of successful updates
+  * `/api/config/KEY.FMT` (delete) *TODO*
+  _action:_ deletes KEY from configuration
+  _returns:_ status
+  * `/api/config/KEY.FMT` (read) *TODO*
+  _action:_ reads KEY from configuration
+  _returns:_ value
+  * `/api/config/KEY.FMT` (update) *TODO*
+  _action:_ updates KEY in configuration
+  _returns:_ status
 
-  * `/api/object.FMT` (create) -- creates an object from valid object keys supplied in postdata, returns oid
-  * `/api/object.FMT` (read) -- returns a list of oids, sorted most-recently-interesting-first
-  * `/api/object/OID` (read) *NOTE1* -- returns the data associated with OID, eg: a JPEG file
-  * `/api/object/OID.FMT` (delete) -- deletes OID, returns status
-  * `/api/object/OID.FMT` (read) -- returns all metadata associated with OID
-  * `/api/object/OID/key.FMT` (create) -- updates multiple keys for OID from valid object keys supplied in postdata, returns number of successful updates
-  * `/api/object/OID/key/KEY.FMT` (delete) -- deletes KEY from OID, returns status
-  * `/api/object/OID/key/KEY.FMT` (read) *NOTE1* -- reads KEY from OID, returns value
-  * `/api/object/OID/key/KEY.FMT` (update) -- updates KEY in OID, returns status
+  * `/api/object.FMT` (create)
+  _action:_ creates an object from valid object keys supplied in postdata
+  _returns:_ oid
+  * `/api/object.FMT` (read)
+  _returns:_ a list of oids, sorted most-recently-interesting-first
+  * `/api/object/OID` (read) *NOTE1*
+  _returns:_ the data associated with OID, eg: a JPEG file
+  * `/api/object/OID.FMT` (delete)
+  _action:_ deletes OID
+  _returns:_ status
+  * `/api/object/OID.FMT` (read)
+  _returns:_ all metadata associated with OID
+  * `/api/object/OID/key.FMT` (create)
+  _action:_ updates multiple keys for OID from valid object keys supplied in postdata
+  _returns:_ number of successful updates
+  * `/api/object/OID/key/KEY.FMT` (delete)
+  _action:_ deletes KEY from OID
+  _returns:_ status
+  * `/api/object/OID/key/KEY.FMT` (read) *NOTE1*
+  _action:_ reads KEY from OID
+  _returns:_ value
+  * `/api/object/OID/key/KEY.FMT` (update)
+  _action:_ updates KEY in OID
+  _returns:_ status
 
-  * `/api/object/OID/comment.FMT` (create) *TODO* -- creates a comment (for OID) from valid comment keys supplied in postdata, returns cid
-  * `/api/object/OID/comment.FMT` (read) *TODO* -- returns a list of cids (for OID) sorted most-recently-interesting-first
-  * `/api/object/OID/CID.FMT` (delete) *TODO* -- deletes CID (for OID), returns status
-  * `/api/object/OID/CID.FMT` (read) *TODO* -- returns all metadata associated with CID
-  * `/api/object/OID/CID/key.FMT` (create) *TODO* -- updates multiple keys for CID (of OID) from valid comment keys supplied in postdata, returns number of successful updates
-  * `/api/object/OID/CID/key/KEY.FMT` (delete) *TODO* -- deletes KEY from CID (of OID), returns status
-  * `/api/object/OID/CID/key/KEY.FMT` (read) *TODO* -- reads KEY from CID (of OID), returns value
-  * `/api/object/OID/CID/key/KEY.FMT` (update) *TODO* -- updates KEY in CID (of OID), returns status
+  * `/api/object/OID/comment.FMT` (create) *TODO*
+  _action:_ creates a comment (for OID) from valid comment keys supplied in postdata
+  _returns:_ cid
+  * `/api/object/OID/comment.FMT` (read) *TODO*
+  _returns:_ a list of cids (for OID) sorted most-recently-interesting-first
+  * `/api/object/OID/CID.FMT` (delete) *TODO*
+  _action:_ deletes CID (for OID)
+  _returns:_ status
+  * `/api/object/OID/CID.FMT` (read) *TODO*
+  _returns:_ all metadata associated with CID
+  * `/api/object/OID/CID/key.FMT` (create) *TODO*
+  _action:_ updates multiple keys for CID (of OID) from valid comment keys supplied in postdata
+  _returns:_ number of successful updates
+  * `/api/object/OID/CID/key/KEY.FMT` (delete) *TODO*
+  _action:_ deletes KEY from CID (of OID)
+  _returns:_ status
+  * `/api/object/OID/CID/key/KEY.FMT` (read) *TODO*
+  _action:_ reads KEY from CID (of OID)
+  _returns:_ value
+  * `/api/object/OID/CID/key/KEY.FMT` (update) *TODO*
+  _action:_ updates KEY in CID (of OID)
+  _returns:_ status
 
-  * `/api/object/OID/clone.FMT` (create) *TODO* -- clones OID (sans comments), returns new OID
-  * `/api/object/OID/clone.FMT` (read) *TODO* -- returns list of oids that are clones of OID
+  * `/api/object/OID/clone.FMT` (create) *TODO*
+  _action:_ clones OID (sans comments)
+  _returns:_ new OID
+  * `/api/object/OID/clone.FMT` (read) *TODO*
+  _returns:_ list of oids that are clones of OID
 
-  * `/api/relation.FMT` (create) -- creates a relation from valid relation keys supplied in postdata, returns rid
-  * `/api/relation.FMT` (read) -- returns a list of rids, sorted most-recently-interesting-first
-  * `/api/relation/RID.FMT` (delete) -- deletes RID, returns status
-  * `/api/relation/RID.FMT` (read) -- returns all metadata associated with RID
-  * `/api/relation/RID/key.FMT` (create) -- updates multiple keys for RID from valid relation keys supplied in postdata, returns number of successful updates
-  * `/api/relation/RID/key/KEY.FMT` (delete) -- deletes KEY from RID, returns status
-  * `/api/relation/RID/key/KEY.FMT` (read) -- reads KEY from RID, returns value
-  * `/api/relation/RID/key/KEY.FMT` (update) -- updates KEY in RID, returns status
+  * `/api/relation.FMT` (create)
+  _action:_ creates a relation from valid relation keys supplied in postdata
+  _returns:_ rid
+  * `/api/relation.FMT` (read)
+  _returns:_ a list of rids, sorted most-recently-interesting-first
+  * `/api/relation/RID.FMT` (delete)
+  _action:_ deletes RID
+  _returns:_ status
+  * `/api/relation/RID.FMT` (read)
+  _returns:_ all metadata associated with RID
+  * `/api/relation/RID/key.FMT` (create)
+  _action:_ updates multiple keys for RID from valid relation keys supplied in postdata
+  _returns:_ number of successful updates
+  * `/api/relation/RID/key/KEY.FMT` (delete)
+  _action:_ deletes KEY from RID
+  _returns:_ status
+  * `/api/relation/RID/key/KEY.FMT` (read)
+  _action:_ reads KEY from RID
+  _returns:_ value
+  * `/api/relation/RID/key/KEY.FMT` (update)
+  _action:_ updates KEY in RID
+  _returns:_ status
 
-  * `/api/select/object.FMT` (read) *TODO* -- tbd
-  * `/api/select/relation.FMT` (read) *TODO* -- tbd
-  * `/api/select/tag.FMT` (read) *TODO* -- tbd
-  * `/api/share/raw/RID/RVSN/OID.FMT` (read) *TODO* -- tbd
-  * `/api/share/redirect/RID.FMT` (read) *TODO* -- tbd
-  * `/api/share/redirect/RID/OID.FMT` (read) *TODO* -- tbd
-  * `/api/share/url/RID.FMT` (read) *TODO* -- tbd
-  * `/api/share/url/RID/OID.FMT` (read) *TODO* -- tbd
+  * `/api/select/object.FMT` (read) *TODO*
+  _action:_ tbd
+  * `/api/select/relation.FMT` (read) *TODO*
+  _action:_ tbd
+  * `/api/select/tag.FMT` (read) *TODO*
+  _action:_ tbd
+  * `/api/share/raw/RID/RVSN/OID.FMT` (read) *TODO*
+  _action:_ tbd
+  * `/api/share/redirect/RID.FMT` (read) *TODO*
+  _action:_ tbd
+  * `/api/share/redirect/RID/OID.FMT` (read) *TODO*
+  _action:_ tbd
+  * `/api/share/url/RID.FMT` (read) *TODO*
+  _action:_ tbd
+  * `/api/share/url/RID/OID.FMT` (read) *TODO*
+  _action:_ tbd
 
-  * `/api/tag.FMT` (create) -- creates a tag from valid tag keys supplied in postdata, returns tid
-  * `/api/tag.FMT` (read) -- returns a list of tids, sorted most-recently-interesting-first
-  * `/api/tag/TID.FMT` (delete) -- deletes TID, returns status
-  * `/api/tag/TID.FMT` (read) -- returns all metadata associated with TID
-  * `/api/tag/TID/key.FMT` (create) -- updates multiple keys for TID from valid tag keys supplied in postdata, returns number of successful updates
-  * `/api/tag/TID/key/KEY.FMT` (delete) -- deletes KEY from TID, returns status
-  * `/api/tag/TID/key/KEY.FMT` (read) -- reads KEY from TID, returns value
-  * `/api/tag/TID/key/KEY.FMT` (update) -- updates KEY in TID, returns status
+  * `/api/tag.FMT` (create)
+  _action:_ creates a tag from valid tag keys supplied in postdata
+  _returns:_ tid
+  * `/api/tag.FMT` (read)
+  _returns:_ a list of tids, sorted most-recently-interesting-first
+  * `/api/tag/TID.FMT` (delete)
+  _action:_ deletes TID
+  _returns:_ status
+  * `/api/tag/TID.FMT` (read)
+  _returns:_ all metadata associated with TID
+  * `/api/tag/TID/key.FMT` (create)
+  _action:_ updates multiple keys for TID from valid tag keys supplied in postdata
+  _returns:_ number of successful updates
+  * `/api/tag/TID/key/KEY.FMT` (delete)
+  _action:_ deletes KEY from TID
+  _returns:_ status
+  * `/api/tag/TID/key/KEY.FMT` (read)
+  _action:_ reads KEY from TID
+  _returns:_ value
+  * `/api/tag/TID/key/KEY.FMT` (update)
+  _action:_ updates KEY in TID
+  _returns:_ status
 
-  * `/api/version.FMT` (read) -- returns version information as a structure
+  * `/api/version.FMT` (read)
+  _returns:_ version information as a structure
 
 =valid object-related keys=
 
