Edited wiki page through web user interface.

--- a/wiki/MineAPI.wiki
+++ b/wiki/MineAPI.wiki
@@ -48,10 +48,13 @@ take precedence over post-data.
 
   - root directory for user interface pages
 
-  * `/v/` (get)
   * `/v/*` (get) (post) *TODO*
 
   - vanity naming space, maps /v/FOO(/BAR)* to minekey of a public relationship for traditional blog-type one-to-many communication.
+
+  * `/r/*` (get) (post) *TODO*
+
+  - rendezvous naming space, space to hook plugin listeners, eg: OAuth Identica subscriber server URLs.
 
 =Minekey URLs=
 
